--- a/top-games.html
+++ b/top-games.html
@@ -4,22 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top PC Games 2025 - Best Downloads & Reviews | PC Games</title>
-    <meta name="description" content="Download the top PC games of 2025. Explore the best action, RPG, adventure, and shooter games. Read reviews, safe download links, and join our gaming community.">
-    <meta name="keywords" content="top PC games, best PC games 2025, download top games, action games, RPG, adventure games, shooter games, PC game reviews, safe downloads">
+    <title>Top PC Games 2025 - Best Downloads, Reviews & Rankings | PC Games</title>
+    <meta name="description"
+        content="Discover the best PC games of 2025. Explore top action, RPG, adventure, and shooter games with detailed reviews, safe download links, and community ratings. Updated rankings based on player feedback.">
+    <meta name="keywords"
+        content="top PC games 2025, best PC games download, action games 2025, RPG games 2025, adventure games 2025, shooter games 2025, PC game reviews 2025, game rankings 2025, gaming community, best PC games list, popular PC games">
+    <meta name="author" content="PC Games Team">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="language" content="English">
+    <meta name="coverage" content="Worldwide">
+    <meta name="distribution" content="Global">
+    <meta name="rating" content="General">
+    <meta name="revisit-after" content="1 days">
+    <link rel="canonical" href="https://pcgames.com.de/top-games.html">
+    <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
+    <link rel="alternate" hreflang="en" href="https://pcgames.com.de/top-games.html">
+    <link rel="alternate" hreflang="de" href="https://pcgames.com.de/de/beste-spiele.html">
+    <link rel="alternate" hreflang="x-default" href="https://pcgames.com.de/top-games.html">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
-    <link rel="canonical" href="https://pcgames.com.de/top-games.html">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="PC Games Team">
-    <meta name="language" content="English">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#181a1b">
+    <!-- Additional SEO meta tags -->
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
+    <meta name="yandexbot" content="index, follow">
+    <meta name="msnbot" content="index, follow">
+    <meta name="alexabot" content="index, follow">
+    <meta name="copyright" content="PC Games 2025">
+    <meta name="DC.title" content="Top PC Games 2025 - Best Downloads, Reviews & Rankings">
+    <meta name="DC.description"
+        content="Discover the best PC games of 2025. Explore top action, RPG, adventure, and shooter games with detailed reviews, safe download links, and community ratings.">
+    <meta name="DC.creator" content="PC Games Team">
+    <meta name="DC.publisher" content="PC Games">
+    <meta name="DC.date" content="2025-07-01">
+    <meta name="DC.language" content="en">
+    <meta name="DC.rights" content="All rights reserved">
+    <meta name="DC.format" content="text/html">
+    <meta name="DC.type" content="Website">
+    <meta name="DC.identifier" content="https://pcgames.com.de/top-games.html">
 
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Top PC Games 2025 - Best Downloads & Reviews | PC Games" />
-    <meta property="og:description" content="Download the top PC games of 2025. Explore the best action, RPG, adventure, and shooter games. Read reviews, safe download links, and join our gaming community." />
+    <meta property="og:description"
+        content="Download the top PC games of 2025. Explore the best action, RPG, adventure, and shooter games. Read reviews, safe download links, and join our gaming community." />
     <meta property="og:image" content="https://pcgames.com.de/images/og-image.png" />
     <meta property="og:url" content="https://pcgames.com.de/top-games.html" />
     <meta property="og:type" content="website" />
@@ -75,53 +102,66 @@
       ]
     }
     </script>
-</head> 
+</head>
 
 <body>
-    <!-- <h1>Top PC Games 2025 - Best Downloads & Reviews</h1> -->
-    <!-- Breadcrumbs for SEO -->
-    <!-- <nav aria-label="Breadcrumb" class="breadcrumbs">
-      <ol>
-        <li><a href="index.html">Home</a></li>
-        <li>Top Games</li>
-      </ol>
-    </nav> -->
-    <nav class="navbar">
-        <div class="left-section">
-            <div class="logo">
-                <h1>PC Games</h1>
-            </div>
-        </div>
-        <div class="center-section">
-            <div class="search-container">
-                <input type="text" placeholder="Search games...">
-                <button type="button" class="search-btn">
-                    <i class="fas fa-search"></i>
-                    Search
+    <header class="header">
+        <div class="navbar">
+            <div class="left-section">
+                <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false"
+                    aria-controls="main-navigation">
+                    <span class="menu-icon">
+                        <span class="menu-line"></span>
+                        <span class="menu-line"></span>
+                        <span class="menu-line"></span>
+                    </span>
+                    <span class="sr-only">Menu</span>
                 </button>
+                <div class="logo">
+                    <h1><a href="index.html" style="color: inherit; text-decoration: none;">PC Games</a></h1>
+                </div>
+            </div>
+            <div class="center-section">
+                <div class="search-container">
+                    <input type="text" placeholder="Search games..." aria-label="Search games">
+                    <button type="button" class="search-btn" aria-label="Search">
+                        <i class="fas fa-search"></i>
+                        <span class="search-text">Search</span>
+                    </button>
+                </div>
+            </div>
+            <div class="right-section">
+                <div class="auth-buttons">
+                    <button class="login-btn" aria-label="Login">Login</button>
+                    <button class="register-btn" aria-label="Register">Register</button>
+                </div>
             </div>
         </div>
-        <div class="right-section">
-            <div class="auth-buttons">
-                <button class="login-btn">Login</button>
-                <button class="register-btn">Register</button>
-            </div>
-        </div>
-    </nav>
-    <div class="sub-nav">
-        <div class="nav-links">
-            <a href="index.html">HOME</a>
-            <a href="new-game.html">NEW GAMES</a>
-            <a href="top-games.html">TOP GAMES</a>
-            <a href="contact.html">CONTACT US</a>
-        </div>
-        <div class="right-controls">
-            <button class="bookmark-btn" onclick="showBookmarks()">
-                <i class="fas fa-bookmark"></i>
-                Bookmarks
-            </button>
-            <div class="language-selector">
-                <select id="language">
+        <div class="sub-nav">
+            <nav id="main-navigation" class="nav-links" aria-label="Main navigation">
+                <a href="index.html" class="active" aria-current="page">
+                    <i class="fas fa-home" aria-hidden="true"></i>
+                    <span>HOME</span>
+                </a>
+                <a href="new-game.html">
+                    <i class="fas fa-gamepad" aria-hidden="true"></i>
+                    <span>NEW GAMES</span>
+                </a>
+                <a href="top-games.html">
+                    <i class="fas fa-trophy" aria-hidden="true"></i>
+                    <span>TOP GAMES</span>
+                </a>
+                <a href="contact.html">
+                    <i class="fas fa-envelope" aria-hidden="true"></i>
+                    <span>CONTACT US</span>
+                </a>
+            </nav>
+            <div class="right-controls">
+                <button class="bookmark-btn" onclick="showBookmarks()" aria-label="View bookmarks">
+                    <i class="fas fa-bookmark" aria-hidden="true"></i>
+                    <span class="bookmark-text">Bookmarks</span>
+                </button>
+                <select id="language" aria-label="Select language" onchange="changeLanguage(event)">
                     <option value="en">English</option>
                     <option value="es">Español</option>
                     <option value="fr">Français</option>
@@ -129,7 +169,9 @@
                 </select>
             </div>
         </div>
-    </div>
+    </header>
+    <!-- Mobile Menu Overlay -->
+    <div class="menu-overlay"></div>
 
     <div class="main-container">
         <aside class="sidebar">
@@ -233,7 +275,8 @@
             <div class="slider-container">
                 <div class="slider">
                     <div class="slide active">
-                        <img src="images/slider.png" alt="Assassin's Creed Valhalla PC Game Download - Top Action Adventure">
+                        <img src="images/slider.png"
+                            alt="Assassin's Creed Valhalla PC Game Download - Top Action Adventure">
                         <div class="slide-content">
                             <h2>Assassin's Creed Valhalla</h2>
                             <p>Become a legendary Viking warrior raised on tales of battle and glory.</p>
@@ -580,7 +623,8 @@
                 <!-- Game Card 29 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games28.jpg" alt="The Witcher 3 Wild Hunt PC Game Download - Top Open World RPG">
+                        <img src="images/games28.jpg"
+                            alt="The Witcher 3 Wild Hunt PC Game Download - Top Open World RPG">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -1191,6 +1235,7 @@
     </footer>
     <script src="js/ashu.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
