--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - PC Games | Support & Feedback</title>
-    <meta name="description" content="Contact PC Games for support, questions, suggestions, or feedback. Reach our team for help with PC game downloads, issues, or partnership inquiries.">
-    <meta name="keywords" content="PC Games Contact, Support, Feedback, Game Download Help, Gaming Support, PC Game Inquiries, Contact PC Games, Game Issues, Game Suggestions">
+    <title>Contact PC Games - Support, Feedback & Help Center</title>
+    <meta name="description"
+        content="Contact PC Games for support, feedback, or partnership inquiries. Reach our team for help with PC game downloads, technical issues, or business opportunities. Fast response guaranteed.">
+    <meta name="keywords"
+        content="contact PC Games, gaming support, game download help, PC game issues, technical support, customer service, feedback, partnership inquiries, business opportunities, game troubleshooting">
     <meta name="author" content="PC Games Team">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="language" content="English">
+    <meta name="coverage" content="Worldwide">
+    <meta name="distribution" content="Global">
+    <meta name="rating" content="General">
+    <meta name="revisit-after" content="1 days">
     <meta name="theme-color" content="#1a1a1a">
     <link rel="canonical" href="https://pcgames.com.de/contact.html">
+    <link rel="alternate" hreflang="en" href="https://pcgames.com.de/contact.html">
+    <link rel="alternate" hreflang="de" href="https://pcgames.com.de/de/kontakt.html">
+    <link rel="alternate" hreflang="x-default" href="https://pcgames.com.de/contact.html">
+    <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
+    <!-- Additional SEO meta tags -->
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
+    <meta name="yandexbot" content="index, follow">
+    <meta name="msnbot" content="index, follow">
+    <meta name="alexabot" content="index, follow">
+    <meta name="copyright" content="PC Games 2025">
+    <meta name="DC.title" content="Contact PC Games - Support, Feedback & Help Center">
+    <meta name="DC.description"
+        content="Contact PC Games for support, feedback, or partnership inquiries. Reach our team for help with PC game downloads, technical issues, or business opportunities.">
+    <meta name="DC.creator" content="PC Games Team">
+    <meta name="DC.publisher" content="PC Games">
+    <meta name="DC.date" content="2025-07-01">
+    <meta name="DC.language" content="en">
+    <meta name="DC.rights" content="All rights reserved">
+    <meta name="DC.format" content="text/html">
+    <meta name="DC.type" content="Website">
+    <meta name="DC.identifier" content="https://pcgames.com.de/contact.html">
     <!-- Open Graph tags -->
     <meta property="og:title" content="Contact Us - PC Games | Support & Feedback">
-    <meta property="og:description" content="Contact PC Games for support, questions, suggestions, or feedback. Reach our team for help with PC game downloads, issues, or partnership inquiries.">
+    <meta property="og:description"
+        content="Contact PC Games for support, questions, suggestions, or feedback. Reach our team for help with PC game downloads, issues, or partnership inquiries.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pcgames.com.de/contact.html">
     <meta property="og:site_name" content="PC Games">
@@ -22,11 +52,13 @@
     <!-- Twitter Card tags -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Contact Us - PC Games | Support & Feedback">
-    <meta name="twitter:description" content="Contact PC Games for support, questions, suggestions, or feedback. Reach our team for help with PC game downloads, issues, or partnership inquiries.">
+    <meta name="twitter:description"
+        content="Contact PC Games for support, questions, suggestions, or feedback. Reach our team for help with PC game downloads, issues, or partnership inquiries.">
     <meta name="twitter:image" content="https://pcgames.com.de/images/contact-og.jpg">
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Structured Data: ContactPage & FAQ -->
     <script type="application/ld+json">
     {
@@ -82,42 +114,64 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="left-section">
-            <div class="logo">
-                <h1>PC Games</h1>
-            </div>
-        </div>
-        <div class="center-section">
-            <div class="search-container">
-                <input type="text" placeholder="Search games...">
-                <button type="button" class="search-btn">
-                    <i class="fas fa-search"></i>
-                    Search
+    <!-- Main Navigation -->
+    <header class="header">
+        <div class="navbar">
+            <div class="left-section">
+                <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false"
+                    aria-controls="main-navigation">
+                    <span class="menu-icon">
+                        <span class="menu-line"></span>
+                        <span class="menu-line"></span>
+                        <span class="menu-line"></span>
+                    </span>
+                    <span class="sr-only">Menu</span>
                 </button>
+                <div class="logo">
+                    <h1><a href="index.html" style="color: inherit; text-decoration: none;">PC Games</a></h1>
+                </div>
+            </div>
+            <div class="center-section">
+                <div class="search-container">
+                    <input type="text" placeholder="Search games..." aria-label="Search games">
+                    <button type="button" class="search-btn" aria-label="Search">
+                        <i class="fas fa-search"></i>
+                        <span class="search-text">Search</span>
+                    </button>
+                </div>
+            </div>
+            <div class="right-section">
+                <div class="auth-buttons">
+                    <button class="login-btn" aria-label="Login">Login</button>
+                    <button class="register-btn" aria-label="Register">Register</button>
+                </div>
             </div>
         </div>
-        <div class="right-section">
-            <div class="auth-buttons">
-                <button class="login-btn">Login</button>
-                <button class="register-btn">Register</button>
-            </div>
-        </div>
-    </nav>
-    <div class="sub-nav">
-        <div class="nav-links">
-            <a href="index.html">HOME</a>
-            <a href="new-game.html">NEW GAMES</a>
-            <a href="top-games.html">TOP GAMES</a>
-            <a href="contact.html">CONTACT US</a>
-        </div>
-        <div class="right-controls">
-            <button class="bookmark-btn" onclick="showBookmarks()">
-                <i class="fas fa-bookmark"></i>
-                Bookmarks
-            </button>
-            <div class="language-selector">
-                <select id="language">
+        <div class="sub-nav">
+            <nav id="main-navigation" class="nav-links" aria-label="Main navigation">
+                <a href="index.html" class="active" aria-current="page">
+                    <i class="fas fa-home" aria-hidden="true"></i>
+                    <span>HOME</span>
+                </a>
+                <a href="new-game.html">
+                    <i class="fas fa-gamepad" aria-hidden="true"></i>
+                    <span>NEW GAMES</span>
+                </a>
+                <a href="top-games.html">
+                    <i class="fas fa-trophy" aria-hidden="true"></i>
+                    <span>TOP GAMES</span>
+                </a>
+                <a href="contact.html">
+                    <i class="fas fa-envelope" aria-hidden="true"></i>
+                    <span>CONTACT US</span>
+                </a>
+            </nav>
+            <div class="right-controls">
+                <button class="bookmark-btn" onclick="showBookmarks()" aria-label="View bookmarks">
+                    <i class="fas fa-bookmark" aria-hidden="true"></i>
+                    <span class="bookmark-text">Bookmarks</span>
+                </button>
+                <select id="language" aria-label="Select language" onchange="changeLanguage(event)">
                     <option value="en">English</option>
                     <option value="es">Español</option>
                     <option value="fr">Français</option>
@@ -125,41 +179,88 @@
                 </select>
             </div>
         </div>
-    </div>
+    </header>
 
-    <!-- Breadcrumbs for SEO and navigation -->
-    <!-- <nav aria-label="Breadcrumb" class="breadcrumb-nav">
-        <ol class="breadcrumb-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="contact.html" aria-current="page">Contact Us</a></li>
-        </ol>
-    </nav> -->
-    <main class="main-content">
-        <h1>Contact Us</h1>
-        <p>If you have any questions, suggestions, or feedback about PC Games, please fill out the form below. Our support team will get back to you as soon as possible.</p>
-        <form action="contact_process.php" method="post" aria-label="Contact form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required aria-required="true" autocomplete="name">
+    <!-- Mobile Menu Overlay -->
+    <div class="menu-overlay"></div>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required aria-required="true" autocomplete="email">
+    <!-- Contact Section -->
+    <section
+        style="display: flex; flex-direction: column; align-items: center; padding: 4rem 2rem; background-color: #f4f4f4;">
+        <h1 style="font-size: 2.5rem; color: #333; text-align: center; margin-bottom: 2rem;">Get in Touch</h1>
+        <div
+            style="display: flex; flex-direction: row; gap: 2rem; max-width: 1200px; width: 100%; justify-content: space-between; align-items: flex-start;">
+            <!-- Left Side: Contact Information -->
+            <div style="flex: 0 0 45%;">
+                <div
+                    style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08);">
+                    <h2 style="font-size: 1.8rem; color: #333; margin-bottom: 1.5rem; text-align: center;">Contact
+                        Information</h2>
+                    <div style="display: flex; flex-direction: column; gap: 1.5rem;">
+                        <div style="display: flex; align-items: center; gap: 1rem; text-decoration: none; color: #333;">
+                            <i class="fas fa-phone" style="font-size: 1.5rem; color: #4CAF50;"></i>
+                            <span style="font-size: 1.2rem; font-weight: 500;">Phone: +91 8392877813</span>
+                        </div>
+                        <div style="display: flex; align-items: center; gap: 1rem; text-decoration: none; color: #333;">
+                            <i class="fas fa-envelope" style="font-size: 1.5rem; color: #4CAF50;"></i>
+                            <span style="font-size: 1.2rem; font-weight: 500;">Email: info@pcgames.com.de</span>
+                        </div>
+                        <div style="display: flex; align-items: center; gap: 1rem; text-decoration: none; color: #333;">
+                            <i class="fas fa-map-marker-alt" style="font-size: 1.5rem; color: #4CAF50;"></i>
+                            <span style="font-size: 1.2rem; font-weight: 500;">Address: Noida, Uttar Pradesh,
+                                India</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" required aria-required="true"></textarea>
-
-            <button type="submit">Send Message</button>
-        </form>
-    </main>
+            <!-- Right Side: Contact Form -->
+            <div style="flex: 0 0 50%;">
+                <div
+                    style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08);">
+                    <h2 style="font-size: 1.8rem; color: #333; margin-bottom: 1.5rem;">Contact Form</h2>
+                    <form style="display: flex; flex-direction: column; gap: 1.5rem;">
+                        <div style="display: flex; flex-direction: column; gap: 0.5rem;">
+                            <label style="font-size: 1rem; color: #666;">Name:</label>
+                            <input type="text" name="name" required
+                                style="padding: 1rem; border: 1px solid #e0e0e0; border-radius: 8px; font-size: 1rem; transition: all 0.3s ease;">
+                        </div>
+                        <div style="display: flex; flex-direction: column; gap: 0.5rem;">
+                            <label style="font-size: 1rem; color: #666;">Email:</label>
+                            <input type="email" name="email" required
+                                style="padding: 1rem; border: 1px solid #e0e0e0; border-radius: 8px; font-size: 1rem; transition: all 0.3s ease;">
+                        </div>
+                        <div style="display: flex; flex-direction: column; gap: 0.5rem;">
+                            <label style="font-size: 1rem; color: #666;">Subject:</label>
+                            <input type="text" name="subject" required
+                                style="padding: 1rem; border: 1px solid #e0e0e0; border-radius: 8px; font-size: 1rem; transition: all 0.3s ease;">
+                        </div>
+                        <div style="display: flex; flex-direction: column; gap: 0.5rem;">
+                            <label style="font-size: 1rem; color: #666;">Message:</label>
+                            <textarea name="message" rows="6" required
+                                style="padding: 1rem; border: 1px solid #e0e0e0; border-radius: 8px; font-size: 1rem; transition: all 0.3s ease;"></textarea>
+                        </div>
+                        <button type="submit"
+                            style="padding: 1rem; background-color: #4CAF50; color: white; border: none; border-radius: 8px; cursor: pointer; font-size: 1.1rem; transition: all 0.3s ease;">
+                            <span style="margin-left: 0.5rem;">Send Message</span>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer class="footer">
         <a href="https://api.whatsapp.com/send?phone=918392877813" aria-label="Chat with us on WhatsApp">
-            <img src="images/whatsapp2.png" alt="Contact PC Games on WhatsApp for support and inquiries" class="whatsapp-icon">
+            <img src="images/whatsapp2.png" alt="Contact PC Games on WhatsApp for support and inquiries"
+                class="whatsapp-icon">
         </a>
         <div class="footer-content">
 
             <div class="footer-section">
                 <h3>About Us</h3>
-                <p>Your ultimate destination for PC gaming news, reviews, and downloads. Join our community of gamers
+                <p>Your ultimate destination for PC gaming news, reviews, and downloads. Join our community of
+                    gamers
                     today!</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook"></i></a>
@@ -212,6 +313,7 @@
     </footer>
     <script src="js/ashu.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
