--- a/new-game.html
+++ b/new-game.html
@@ -4,22 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New PC Games 2025 - Download Latest Releases | PC Games</title>
-    <meta name="description" content="Download new PC games released in 2025. Find the latest action, RPG, adventure, and strategy games. Safe downloads, reviews, and community updates.">
-    <meta name="keywords" content="new PC games, latest PC games 2025, download new games, action games, RPG, adventure games, strategy games, PC game reviews, safe downloads">
+    <title>New PC Games 2025 - Latest Releases & Downloads | PC Games</title>
+    <meta name="description"
+        content="Download the latest PC games released in 2025. Find new action, RPG, adventure, and strategy games with safe download links, reviews, and community updates. Updated daily with fresh releases.">
+    <meta name="keywords"
+        content="new PC games 2025, latest PC games download, action games 2025, RPG games 2025, adventure games 2025, strategy games 2025, PC game reviews 2025, game releases 2025, free PC games 2025, new game downloads">
+    <meta name="author" content="PC Games Team">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="language" content="English">
+    <meta name="coverage" content="Worldwide">
+    <meta name="distribution" content="Global">
+    <meta name="rating" content="General">
+    <meta name="revisit-after" content="1 days">
+    <link rel="canonical" href="https://pcgames.com.de/new-game.html">
+    <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
+    <link rel="alternate" hreflang="en" href="https://pcgames.com.de/new-game.html">
+    <link rel="alternate" hreflang="de" href="https://pcgames.com.de/de/neue-spiele.html">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="shortcut icon" href="images/icon/favicon.ico" type="image/x-icon">
-    <link rel="canonical" href="https://pcgames.com.de/new-game.html">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="PC Games Team">
-    <meta name="language" content="English">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="alternate" hreflang="x-default" href="https://pcgames.com.de/new-game.html">
     <meta name="theme-color" content="#181a1b">
+    <!-- Additional SEO meta tags -->
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
+    <meta name="yandexbot" content="index, follow">
+    <meta name="msnbot" content="index, follow">
+    <meta name="alexabot" content="index, follow">
+    <meta name="copyright" content="PC Games 2025">
+    <meta name="DC.title" content="New PC Games 2025 - Latest Releases & Downloads">
+    <meta name="DC.description"
+        content="Download the latest PC games released in 2025. Find new action, RPG, adventure, and strategy games with safe download links, reviews, and community updates.">
+    <meta name="DC.creator" content="PC Games Team">
+    <meta name="DC.publisher" content="PC Games">
+    <meta name="DC.date" content="2025-07-01">
+    <meta name="DC.language" content="en">
+    <meta name="DC.rights" content="All rights reserved">
+    <meta name="DC.format" content="text/html">
+    <meta name="DC.type" content="Website">
+    <meta name="DC.identifier" content="https://pcgames.com.de/new-game.html">
 
     <!-- Open Graph Tags -->
     <meta property="og:title" content="New PC Games 2025 - Download Latest Releases | PC Games" />
-    <meta property="og:description" content="Download new PC games released in 2025. Find the latest action, RPG, adventure, and strategy games. Safe downloads, reviews, and community updates." />
+    <meta property="og:description"
+        content="Download new PC games released in 2025. Find the latest action, RPG, adventure, and strategy games. Safe downloads, reviews, and community updates." />
     <meta property="og:image" content="https://pcgames.com.de/images/og-image.png" />
     <meta property="og:url" content="https://pcgames.com.de/new-game.html" />
     <meta property="og:type" content="website" />
@@ -72,50 +99,63 @@
 </head>
 
 <body>
-    <!-- <h1>New PC Games 2025 - Download Latest Releases</h1> -->
-    <!-- Breadcrumbs for SEO -->
-    <!-- <nav aria-label="Breadcrumb" class="breadcrumbs">
-      <ol>
-        <li><a href="index.html">Home</a></li>
-        <li>New Games</li>
-      </ol>
-    </nav> -->
-    <nav class="navbar">
-        <div class="left-section">
-            <div class="logo">
-                <h1>PC Games</h1>
-            </div>
-        </div>
-        <div class="center-section">
-            <div class="search-container">
-                <input type="text" placeholder="Search games...">
-                <button type="button" class="search-btn">
-                    <i class="fas fa-search"></i>
-                    Search
+    <header class="header">
+        <div class="navbar">
+            <div class="left-section">
+                <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false"
+                    aria-controls="main-navigation">
+                    <span class="menu-icon">
+                        <span class="menu-line"></span>
+                        <span class="menu-line"></span>
+                        <span class="menu-line"></span>
+                    </span>
+                    <span class="sr-only">Menu</span>
                 </button>
+                <div class="logo">
+                    <h1><a href="index.html" style="color: inherit; text-decoration: none;">PC Games</a></h1>
+                </div>
+            </div>
+            <div class="center-section">
+                <div class="search-container">
+                    <input type="text" placeholder="Search games..." aria-label="Search games">
+                    <button type="button" class="search-btn" aria-label="Search">
+                        <i class="fas fa-search"></i>
+                        <span class="search-text">Search</span>
+                    </button>
+                </div>
+            </div>
+            <div class="right-section">
+                <div class="auth-buttons">
+                    <button class="login-btn" aria-label="Login">Login</button>
+                    <button class="register-btn" aria-label="Register">Register</button>
+                </div>
             </div>
         </div>
-        <div class="right-section">
-            <div class="auth-buttons">
-                <button class="login-btn">Login</button>
-                <button class="register-btn">Register</button>
-            </div>
-        </div>
-    </nav>
-    <div class="sub-nav">
-        <div class="nav-links">
-            <a href="index.html">HOME</a>
-            <a href="new-game.html">NEW GAMES</a>
-            <a href="top-games.html">TOP GAMES</a>
-            <a href="contact.html">CONTACT US</a>
-        </div>
-        <div class="right-controls">
-            <button class="bookmark-btn" onclick="showBookmarks()">
-                <i class="fas fa-bookmark"></i>
-                Bookmarks
-            </button>
-            <div class="language-selector">
-                <select id="language">
+        <div class="sub-nav">
+            <nav id="main-navigation" class="nav-links" aria-label="Main navigation">
+                <a href="index.html" class="active" aria-current="page">
+                    <i class="fas fa-home" aria-hidden="true"></i>
+                    <span>HOME</span>
+                </a>
+                <a href="new-game.html">
+                    <i class="fas fa-gamepad" aria-hidden="true"></i>
+                    <span>NEW GAMES</span>
+                </a>
+                <a href="top-games.html">
+                    <i class="fas fa-trophy" aria-hidden="true"></i>
+                    <span>TOP GAMES</span>
+                </a>
+                <a href="contact.html">
+                    <i class="fas fa-envelope" aria-hidden="true"></i>
+                    <span>CONTACT US</span>
+                </a>
+            </nav>
+            <div class="right-controls">
+                <button class="bookmark-btn" onclick="showBookmarks()" aria-label="View bookmarks">
+                    <i class="fas fa-bookmark" aria-hidden="true"></i>
+                    <span class="bookmark-text">Bookmarks</span>
+                </button>
+                <select id="language" aria-label="Select language" onchange="changeLanguage(event)">
                     <option value="en">English</option>
                     <option value="es">Español</option>
                     <option value="fr">Français</option>
@@ -123,7 +163,9 @@
                 </select>
             </div>
         </div>
-    </div>
+    </header>
+    <!-- Mobile Menu Overlay -->
+    <div class="menu-overlay"></div>
 
     <div class="main-container">
         <aside class="sidebar">
@@ -227,14 +269,16 @@
             <div class="slider-container">
                 <div class="slider">
                     <div class="slide active">
-                        <img src="images/slider.png" alt="Assassin's Creed Valhalla PC Game Download - Action Adventure, New Release">
+                        <img src="images/slider.png"
+                            alt="Assassin's Creed Valhalla PC Game Download - Action Adventure, New Release">
                         <div class="slide-content">
                             <h2>Assassin's Creed Valhalla</h2>
                             <p>Become a legendary Viking warrior raised on tales of battle and glory.</p>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="images/slider1.jpg" alt="Call of Duty: Modern Warfare PC Game Download - Shooter, New Release">
+                        <img src="images/slider1.jpg"
+                            alt="Call of Duty: Modern Warfare PC Game Download - Shooter, New Release">
                         <div class="slide-content">
                             <h2>Call of Duty: Modern Warfare</h2>
                             <p>Experience the ultimate online multiplayer battlefield.</p>
@@ -265,7 +309,8 @@
                 <!-- Game Card 14 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games13.jpeg" alt="Dragon's Dogma 2 PC Game Download - Action RPG, New 2025 Release">
+                        <img src="images/games13.jpeg"
+                            alt="Dragon's Dogma 2 PC Game Download - Action RPG, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -299,7 +344,8 @@
                 <!-- Game Card 15 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games14.jpeg" alt="Silent Hill 2 Remake PC Game Download - Action Horror, New 2025 Release">
+                        <img src="images/games14.jpeg"
+                            alt="Silent Hill 2 Remake PC Game Download - Action Horror, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -334,7 +380,8 @@
                 <!-- Game Card 16 -->
                 <div class="game-card" data-genre="action fps">
                     <div class="game-image">
-                        <img src="images/games15.jpeg" alt="Wrath: Aeon of Ruin PC Game Download - Action FPS, New 2025 Release">
+                        <img src="images/games15.jpeg"
+                            alt="Wrath: Aeon of Ruin PC Game Download - Action FPS, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -368,7 +415,8 @@
                 <!-- Game Card 17 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games16.jpeg" alt="The Thaumaturge PC Game Download - Action RPG, New 2025 Release">
+                        <img src="images/games16.jpeg"
+                            alt="The Thaumaturge PC Game Download - Action RPG, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -402,7 +450,8 @@
                 <!-- Game Card 18 -->
                 <div class="game-card" data-genre="action simulation">
                     <div class="game-image">
-                        <img src="images/games17.jpeg" alt="Lightyear Frontier PC Game Download - Farming Simulation, New 2025 Release">
+                        <img src="images/games17.jpeg"
+                            alt="Lightyear Frontier PC Game Download - Farming Simulation, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -436,7 +485,8 @@
                 <!-- Game Card 19 -->
                 <div class="game-card" data-genre="action rpg">
                     <div class="game-image">
-                        <img src="images/games18.jpg" alt="South Park: Snow Day PC Game Download - Action RPG, New 2025 Release">
+                        <img src="images/games18.jpg"
+                            alt="South Park: Snow Day PC Game Download - Action RPG, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -470,7 +520,8 @@
                 <!-- Game Card 20 -->
                 <div class="game-card" data-genre="action horror">
                     <div class="game-image">
-                        <img src="images/games19.jpeg" alt="Pepper Grinder PC Game Download - Action Horror, New 2025 Release">
+                        <img src="images/games19.jpeg"
+                            alt="Pepper Grinder PC Game Download - Action Horror, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -538,7 +589,8 @@
                 <!-- Game Card 22 -->
                 <div class="game-card" data-genre="action strategy">
                     <div class="game-image">
-                        <img src="images/games21.jpg" alt="Ara: History Untold PC Game Download - Action Strategy, New 2025 Release">
+                        <img src="images/games21.jpg"
+                            alt="Ara: History Untold PC Game Download - Action Strategy, New 2025 Release">
                         <div class="game-overlay">
                             <div class="game-buttons">
                                 <div class="download-options">
@@ -775,6 +827,7 @@
     </footer>
     <script src="js/ashu.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
