--- a/contact.html
+++ b/contact.html
@@ -219,7 +219,8 @@
                 <div
                     style="background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08);">
                     <h2 style="font-size: 1.8rem; color: #333; margin-bottom: 1.5rem;">Contact Form</h2>
-                    <form style="display: flex; flex-direction: column; gap: 1.5rem;">
+                    <form id="contactForm" action="contact_process.php" method="POST"
+                        style="display: flex; flex-direction: column; gap: 1.5rem;">
                         <div style="display: flex; flex-direction: column; gap: 0.5rem;">
                             <label style="font-size: 1rem; color: #666;">Name:</label>
                             <input type="text" name="name" required
@@ -245,6 +246,9 @@
                             <span style="margin-left: 0.5rem;">Send Message</span>
                         </button>
                     </form>
+                    <div id="thankYouMsg" style="display:none; color:green; font-weight:bold; margin-top:1rem;">
+                        Thank you for contacting us! We will get back to you soon.
+                    </div>
                 </div>
             </div>
         </div>
@@ -314,6 +318,34 @@
     <script src="js/ashu.js"></script>
     <script src="js/script.js"></script>
     <script src="js/main.js"></script>
+    <script>
+        document.getElementById('contactForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+            var form = e.target;
+            var formData = new FormData(form);
+
+            fetch('contact_process.php', {
+                method: 'POST',
+                body: formData
+            })
+                .then(res => res.json())
+                .then(data => {
+                    console.log(data); // Debug line
+                    if (data.success) {
+                        form.reset();
+                        var thankYouMsg = document.getElementById('thankYouMsg');
+                        if (thankYouMsg) {
+                            thankYouMsg.style.display = 'block';
+                        } else {
+                            alert('Thank you for contacting us! We will get back to you soon.');
+                        }
+                    } else {
+                        alert(data.error || 'Something went wrong!');
+                    }
+                })
+                .catch(() => alert('Server error!'));
+        });
+    </script>
 </body>
 
 </html>
