--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
         </div>
         <div class="sub-nav">
             <nav id="main-navigation" class="nav-links" aria-label="Main navigation">
-                <a href="index.html" class="active" aria-current="page">
+                <a href="index.html" aria-current="page">
                     <i class="fas fa-home" aria-hidden="true"></i>
                     <span>HOME</span>
                 </a>
@@ -161,7 +161,7 @@
                     <i class="fas fa-trophy" aria-hidden="true"></i>
                     <span>TOP GAMES</span>
                 </a>
-                <a href="contact.html">
+                <a href="contact.html" class="active" aria-current="page">
                     <i class="fas fa-envelope" aria-hidden="true"></i>
                     <span>CONTACT US</span>
                 </a>
