--- a/new-game.html
+++ b/new-game.html
@@ -133,11 +133,11 @@
         </div>
         <div class="sub-nav">
             <nav id="main-navigation" class="nav-links" aria-label="Main navigation">
-                <a href="index.html" class="active" aria-current="page">
+                <a href="index.html" aria-current="page">
                     <i class="fas fa-home" aria-hidden="true"></i>
                     <span>HOME</span>
                 </a>
-                <a href="new-game.html">
+                <a href="new-game.html" class="active" aria-current="page">
                     <i class="fas fa-gamepad" aria-hidden="true"></i>
                     <span>NEW GAMES</span>
                 </a>
