--- a/top-games.html
+++ b/top-games.html
@@ -139,7 +139,7 @@
         </div>
         <div class="sub-nav">
             <nav id="main-navigation" class="nav-links" aria-label="Main navigation">
-                <a href="index.html" class="active" aria-current="page">
+                <a href="index.html" aria-current="page">
                     <i class="fas fa-home" aria-hidden="true"></i>
                     <span>HOME</span>
                 </a>
@@ -147,7 +147,7 @@
                     <i class="fas fa-gamepad" aria-hidden="true"></i>
                     <span>NEW GAMES</span>
                 </a>
-                <a href="top-games.html">
+                <a href="top-games.html" class="active" aria-current="page">
                     <i class="fas fa-trophy" aria-hidden="true"></i>
                     <span>TOP GAMES</span>
                 </a>
